--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,7 @@
 
-header {
-    padding:10px;
+.header1 {
+    padding:20px;
     background-color: black;
-}
-
-.border {
-    padding: 10px;
-    flex-basis: 100%;
 }
 
 .container {
@@ -27,6 +22,11 @@ header {
     margin: 5px 15px 5px 15px;
     flex-basis: 50%;
     background-color: red;
+}
+
+.header2 {
+    padding:0px  20px 20px 20px;
+    background-color: black;
 }
 
 .container2 {
@@ -116,4 +116,15 @@ footer {
 
 footer p {
    padding-left: 10px;
+}
+
+/*__________________________________TABLETA________________________________________*/
+@media (min-width: 768px) {
+
+
+}
+
+/*____________________________________MOVIL________________________________________*/
+@media (min-width: 576px) {
+
 }
