--- a/styles.css
+++ b/styles.css
@@ -139,5 +139,8 @@ footer p {
 
 /*____________________________________MOVIL________________________________________*/
 @media (max-width: 576px) {
-
+    .container3 {
+        display: flex;
+        flex-direction: column;
+    }
 }
